# ai-supply-chain-alpha-lab

./: .gitignore  README.md  README.zh-TW.md  pyproject.toml  requirements.txt
config/: alpha_model_v2.yaml  dashboard_config.yaml  data_sources.yaml  narrative_keywords.yaml  regime_rules.yaml  theme_mapping.yaml  universe.yaml
dashboard/: README.md  __init__.py  app.py
reports/: _test_paper_report.md  daily_alpha_report.md  paper_portfolio_report.md  phase_a1_comparison.md  phase_a2_grid_results.md  phase_a2_recommendation.md  phase_b1_transaction_cost.md  phase_b3_finmind_backfill.md  phase_c_universe_expansion.md  phase_d1_drawdown_control.md  phase_d2_cluster_cap.md  phase_gate_recalibration.md  phase_gate_repair.md  phase_regime_stress.md  phase_step1_comparison.md  walk_forward_v2_summary.md
scripts/: build_expanded_universe.py  fetch_capex_events_from_sec.py  fetch_institutional_flow.py  fetch_monthly_revenue.py  fetch_news_events.py  fetch_valuation.py  init_manual_data.py  run_a2_rerun.py  run_ai_factor_index.py  run_alpha_ranking.py  run_daily_pipeline.py  run_dashboard.py  run_data_coverage_report.py  run_narrative_engine.py  run_paper_portfolio.py  run_phase_d1_drawdown_control.py  run_phase_d2_cluster_cap.py  run_regime_filter.py  run_regime_stress_test.py  run_residual_alpha.py  run_transaction_cost_test.py  run_universe_expansion_test.py  run_walk_forward_v2.py  run_weight_grid.py
tests/: test_ai_factor_index.py  test_cluster_cap.py  test_dashboard_data.py  test_dashboard_data_loader.py  test_data_quality.py  test_exposure_overlay.py  (+12 more)
(+155 files in other folders)
