[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-supply-chain-alpha-lab"
version = "0.2.0"
description = "Daily AI supply chain alpha discovery & ranking platform — residual alpha + theme + narrative + regime."
requires-python = ">=3.11"
authors = [{ name = "ai-supply-chain-alpha-lab" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.24",
    "scipy>=1.11",
    "yfinance>=0.2.40",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tabulate>=0.9",
    "pyarrow>=14.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]   # "." so tests can import the dashboard package
testpaths = ["tests"]
